[package]
name = "book-service-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.2"
serde = { version = "1.0", features = ["derive"] }
postgrest = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
serde_json = "1.0"

[dev-dependencies]
actix-rt = "2.2"
